--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
     src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.82/dist/shoelace.js"></script>
 
   <link rel="stylesheet" href="/assets/styles/index.css">
+  <script type="module" src="/assets/scripts/index.js"></script>
 </head>
 
 <body>
-  <h1>Hi there!</h1>
-  <h2>I am a simple PWA in plain JS :)</h2>
+  <template id="foo">
+    <div>Moin</div>
+  </template>
+  <main>
+    <h1>Hi there!</h1>
+    <h2>I am a simple PWA in plain JS :)</h2>
 
-  <button class="button">Ich bin ein Button</button>
-  <br>
-  <a href="/" class="button">Ich bin ein Link</a>
+    <button class="button">Ich bin ein Button</button>
+    <br>
+    <a href="/" class="button">Ich bin ein Link</a>
+  </main>
 </body>
 
 </html>
