Add and edit more stuff

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -42,16 +42,7 @@
   </header>
 
   <main>
-    <h2>Dein Profil</h2>
-    <div class="profile">
-      <div class="about-me">
-        <div class="avatar">
-          <img src="https://cdn.pixabay.com/photo/2021/02/12/07/03/icon-6007530_960_720.png" alt="">
-        </div>
-        <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime eum adipisci cum, eveniet explicabo sunt
-          atque, ipsa consectetur.</p>
-      </div>
-    </div>
+    <h2>Einstellungen</h2>
   </main>
 </body>
 
