Add settings, edit scripts

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.82/dist/shoelace.js"></script>
 
   <link rel="stylesheet" href="/assets/styles/index.css">
-  <script type="module" src="/assets/scripts/index.js"></script>
+  <script defer type="text/javascript" src="/assets/scripts/index.js"></script>
 </head>
 
 <body>
@@ -25,13 +25,13 @@
 
     <sl-drawer label="Menü" placement="start" class="drawer">
       <nav>
-        <a href="/index.html">
+        <a href="/">
           <sl-icon name="house-door"></sl-icon>Home
         </a>
         <a href="/pages/profile.html">
           <sl-icon name="person"></sl-icon>Dein Profil
         </a>
-        <a href="/pages/settings.html">
+        <a href="/pages/settings">
           <sl-icon name="gear"></sl-icon>Einstellungen
         </a>
       </nav>
