--- a/pages/settings/index.html
+++ b/pages/settings/index.html
@@ -9,6 +9,7 @@
   <title>Fake Twitter</title>
 
   <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#4da5a">
 
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.82/dist/themes/light.css" />
