Change styles, implement dark mode colors

--- a/pages/settings/index.html
+++ b/pages/settings/index.html
@@ -20,7 +20,7 @@
   <script defer type="text/javascript" src="/assets/scripts/index.js"></script>
 </head>
 
-<body id="settings">
+<body>
   <header>
     <sl-icon-button id="go-back" name="chevron-left" label="Zurück"></sl-icon-button>
     <div><strong>Fake Twitter</strong></div>
