--- a/pages/settings/index.html
+++ b/pages/settings/index.html
@@ -22,14 +22,16 @@
 
 <body>
   <header>
-    <sl-icon-button id="go-back" name="chevron-left" label="Zurück"></sl-icon-button>
+    <a href="/index.html">
+      <sl-icon class="back" name="chevron-left"></sl-icon>
+    </a>
     <div><strong>Fake Twitter</strong></div>
   </header>
 
   <main>
     <h2>Einstellungen</h2>
 
-    <div class="settings-list">
+    <div class="action-list">
       <a class="list-item" href="./profile-settings.html">
         Profil-Einstellungen
         <sl-icon name="chevron-right"></sl-icon>
