--- a/index.html
+++ b/index.html
@@ -120,6 +120,15 @@
         </div>
       </div>
     </div>
+
+    <button id="new-post-button" class="button round">
+      <sl-icon name="plus" label="Neuer Post"></sl-icon>
+    </button>
+
+    <sl-dialog id="new-post-dialog" label="Neuer Post" class="dialog-overview">
+      <textarea></textarea>
+      <button class="button" slot="footer">Posten</button>
+    </sl-dialog>
   </main>
 </body>
 
